add tag to website

--- a/_posts/2020-05-12-third.markdown
+++ b/_posts/2020-05-12-third.markdown
@@ -3,7 +3,7 @@ layout: tech_post
 title:  "Robotics Page!"
 date:   2020-05-12 11:51:36 -0300
 catelogue: Robotics
-tags: Machine-Vision
+tags: Robotics
 description: 
 ---
 Second post
