--- a/_posts/tech_main/2020-05-12-mcu.markdown
+++ b/_posts/tech_main/2020-05-12-mcu.markdown
@@ -1,9 +1,9 @@
 ---
 layout: tech_menu
-title:  "MCU"
+title:  "MCU&MPU"
 date:   2020-05-12 17:51:36 -0400
 tags: 
-topics: Mcu
+topics: Mcu&Mpu
 ---
 
 
